fix css namespacing

--- a/src/components/util/TopBar/style.scss
+++ b/src/components/util/TopBar/style.scss
@@ -1,4 +1,4 @@
-.top-bar {
+.onboard--top-bar {
   height: 60px;
   width: 100%;
   top: 0;
